--- a/cloud-resume-challenge/template.yaml
+++ b/cloud-resume-challenge/template.yaml
@@ -15,6 +15,10 @@ Globals:
     LoggingConfig:
       LogFormat: JSON
 Resources:
+  MyWebsite:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: firdous-awesome-website
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
