--- a/cloud-resume-challenge/Makefile
+++ b/cloud-resume-challenge/Makefile
@@ -2,3 +2,9 @@
 
 build:
 	sam build
+
+deploy-infra:
+	sam build && sam deploy
+
+deploy-site:
+	aws s3 sync ./resume-site s3://firdous-awesome-website	
