--- a/cloud-resume-challenge/template.yaml
+++ b/cloud-resume-challenge/template.yaml
@@ -15,10 +15,28 @@ Globals:
     LoggingConfig:
       LogFormat: JSON
 Resources:
-  MyWebsite:
+  NewWebsite:
     Type: AWS::S3::Bucket
+    Properties: 
+      WebsiteConfiguration:
+       IndexDocument: index.html
+      BucketName: firdous-awesome-website   
+
+  MyWebsiteBucketPolicy:
+    Type: AWS::S3::BucketPolicy
     Properties:
-      BucketName: firdous-awesome-website
+      Bucket: !Ref NewWebsite
+      PolicyDocument:
+        Id: MyBucketPolicy
+        Version: '2012-10-17'
+        Statement:
+          - Sid: PublicReadGetObject
+            Effect: Allow
+            Principal: '*'
+            Action:
+              - 's3:GetObject'
+            Resource: !Join ['', ['arn:aws:s3:::', !Ref NewWebsite, '/*']]
+            
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
